Date	Added

2006/10/11
	* Renamed delay_dependon_dex to delay_dependon_agi, made agi now reduce
	  aftercast delay instead of dex if so specified (skill.conf) [Skotlex]
	* Added the config setting sg_angel_skill_ratio (skill.conf) [Skotlex]
	* status_cast_cancel is now a type 4 setting instead of yes/no
	  (status.conf) [Skotlex]
	* Removed gm_all_skill_add_abra as it does nothing (gm.conf) [Skotlex]
2006/09/28
	* Removed config setting sg_miracle_skill_duration, replaced it with
	  sg_miracle_skill_min_duration and sg_miracle_skill_max_duration
	  (skill.conf) [Skotlex]
	* Merged monster_ai&256 (pick random starting position when using skills),
	  since now mobs by default will always check their skill list from the
	  beginning. [Skotlex]
2006/09/25
	* Removed the whole "alert hack on global message" thing, thus
	  ban_spoof_namer is no more. [Skotlex]
	* Also removed config setting allow_atcommand_when_mute as it's no longer
	  used (see manner_system in misc.conf for it's replacement) [Skotlex]
2006/09/14
	* Merged the change of show_mob_hp to show_mob_info. Now you can choose to
	  display a mob's Lv, and/or HP (Hp has two different display formats as
	  well, see battle/monster.conf for details) [Skotlex]
2006/09/11
	* Corrected name of config settings pc_luk_status_def, mob_luk_status_def
	  (status.conf) [Skotlex]
	* Changed the default of enable_baseatk to 9 (player + homun) [Skotlex]
	* Changed the default of enable_perfect_flee to 1 (players only) [Skotlex]
2006/09/09
	* Removed noteleport flags from Geffenia maps [Playtester]
2006/09/07
	* Changed gvg_short_attack_damage_rate to 80, as leaked X.2 [Vicious]
2006/09/01
	* Merged config setting 'partial_name_scan' (gm.conf). When set to yes
	  (default = no), you can use @ commands which require a player, and it will
	  do a partial name match, when set to no, input name must match exactly
	  [Skotlex]
	* Merged config setting 'attack_walk_delay' (battle.conf). Defaults to 0.